--- a/app/index.jade
+++ b/app/index.jade
@@ -1,10 +1,11 @@
 doctype html
 html(lang="en")
   head
-    title="Dummy App"
+    title="Testing App"
     link(rel='stylesheet', href='css/main.css')
 
   body(ng-app="huddyfrontendApp")
+    h1 testing
     ul(class="menu")
       li(class="menu-item", ui-sref-active="is-active")
         a(class="menu-item-link", ui-sref="main") Home
@@ -13,9 +14,13 @@ html(lang="en")
 
     div(ui-view)
 
+    //- Don't change this, jade does not insert the comment correctly
+    <!-- inject:js -->
     script(src="bower_components/angular/angular.js")
     script(src="bower_components/ui-router/release/angular-ui-router.js")
 
     script(src="scripts/app.js")
     script(src="scripts/app.config.js")
     script(src="scripts/controllers/dummy.js")
+    <!-- endinject -->
+
