--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,6 @@ html(lang="en")
     link(rel='stylesheet', href='css/main.css')
 
   body(ng-app="huddyfrontendApp")
-    h1 testing
     ul(class="menu")
       li(class="menu-item", ui-sref-active="is-active")
         a(class="menu-item-link", ui-sref="main") Home
@@ -22,5 +21,6 @@ html(lang="en")
     script(src="scripts/app.js")
     script(src="scripts/app.config.js")
     script(src="scripts/controllers/dummy.js")
+    script(src="scripts/services/dummy.js")
     <!-- endinject -->
 
