--- a/app/index.jade
+++ b/app/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    title="Testing Angular App"
+    title="Angular App"
     link(rel='stylesheet', href='css/main.css')
 
   body(ng-app="huddyfrontendApp")
